<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity"
    android:backgroundTint="@color/black"
    tools:ignore="UseCompoundDrawables">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="154dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/campsite_commander"
        android:textColor="#000000"
        android:textSize="48sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck,TextSizeCheck" />

    <ImageView
        android:id="@+id/Campsite"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/campfire"
        android:src="@drawable/ic_launcher_foreground"
        app:tint="#FFA500"
        tools:ignore="ImageContrastCheck" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/packing_for_an_adventure"
        android:textSize="14sp"
        android:textColor="@color/black"/>

</LinearLayout>